--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,42 +5,24 @@
 	<title>Insert title here</title>
 </head>
 <body>
-	
-	<nav class="navbar navbar-expand-lg bg-body-tertiary" data-th-fragment="navbar">
-		  <div class="container-fluid">
-		    <a class="navbar-brand" href="#">Navbar</a>
-		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		      <span class="navbar-toggler-icon"></span>
-		    </button>
-		    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-		      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-		        <li class="nav-item">
-		          <a class="nav-link active" aria-current="page" href="#">Home</a>
-		        </li>
-		        <li class="nav-item">
-		          <a class="nav-link" href="#">Link</a>
-		        </li>
-		        <li class="nav-item dropdown">
-		          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-		            Dropdown
-		          </a>
-		          <ul class="dropdown-menu">
-		            <li><a class="dropdown-item" href="#">Action</a></li>
-		            <li><a class="dropdown-item" href="#">Another action</a></li>
-		            <li><hr class="dropdown-divider"></li>
-		            <li><a class="dropdown-item" href="#">Something else here</a></li>
-		          </ul>
-		        </li>
-		        <li class="nav-item">
-		          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-		        </li>
-		      </ul>
-		      <form class="d-flex" role="search">
-		        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-		        <button class="btn btn-outline-success" type="submit">Search</button>
-		      </form>
-		    </div>
-		  </div>
+	<nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark" data-th-fragment="navbar">
+	  <div class="container-fluid">
+	    <a class="navbar-brand" href="#">
+      		<img src="/images/logo-unju.png" alt="Bootstrap" width="70%">
+   		</a>
+	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+	      <span class="navbar-toggler-icon"></span>
+	    </button>
+	    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+	      <div class="navbar-nav">
+	        <a class="nav-link active" aria-current="page" href="#">INICIO</a>
+	        <a class="nav-link" href="#">ACERCA DE</a>
+	        <a class="nav-link" href="#">CARRERAS</a>
+	        <a class="nav-link" href="#">NOTICIAS</a>
+	        <a class="nav-link" href="#">CONTACTO</a>
+	      </div>
+	    </div>
+	  </div>
 	</nav>
 	
 	<div class="container" data-th-fragment="footer">
@@ -66,28 +48,5 @@
             <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
             </div>
 	</div>
-<!-- 	<nav class="navbar" data-th-fragment="navbar">
-		<div class="nav-wrapper">
-			<a href="#" class="brand-logo">Logo</a>
-			<ul id="nav-mobile" class="right hide-on-med-and-down">
-				<li><a href="sass.html">Sass</a></li>
-			    <li><a href="badges.html">Components</a></li>
-			    <li><a href="collapsible.html">JavaScript</a></li>
-			</ul>
-		</div>
- 	</nav>
- 	
- 	<div data-th-fragment="paginacion">
-	 	<ul class="pagination">
-		    <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
-		    <li class="active"><a href="#!">1</a></li>
-		    <li class="waves-effect"><a href="#!">2</a></li>
-		    <li class="waves-effect"><a href="#!">3</a></li>
-		    <li class="waves-effect"><a href="#!">4</a></li>
-		    <li class="waves-effect"><a href="#!">5</a></li>
-		    <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
-	 	</ul>
- 	</div> -->
- 	
 </body>
 </html>
