--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -26,27 +26,40 @@
 	</nav>
 	
 	<div class="container" data-th-fragment="footer">
-            <div class="row">
-              <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
-                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-              </div>
-              <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Links</h5>
-                <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-                </ul>
-              </div>
-            </div>
+		<div class="row">
+			<div class="col-4">
+				<h4>FACULTAD DE INGENIERÍA - UNJu</h4>
+				<p>Direccion: Ítalo Palanca Nº 10</p>
+				<p>
+					San Salvador de Jujuy
+					Jujuy - Argentina
+				</p>
+				<p>Correo de contacto: info@fi.unju.edu.ar</p>
+			</div>
+			<div class="col-4">
+				<h4>Redes Sociales</h4>
+				<div class="row">
+					<a href="#">Facebook</a>
+					<a href="#">Youtube</a>
+					<a href="#">Linkedin</a>
+					<a href="#">Instagram</a>
+				</div>
+			</div>
+			<div class="col-4">
+				<h4>Enlaces de Interés</h4>
+				<div class="row">
+					<a href="#">Facebook</a>
+					<a href="#">Youtube</a>
+					<a href="#">Linkedin</a>
+					<a href="#">Instagram</a>
+					<a href="#">Facebook</a>
+					<a href="#">Youtube</a>
+					<a href="#">Linkedin</a>
+					<a href="#">Instagram</a>
+				</div>
+			</div>
+			
 		</div>
-          <div class="footer-copyright">
-            <div class="container">
-            © 2014 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-            </div>
 	</div>
 </body>
 </html>
