--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>TP4</title>
 	<link rel="stylesheet" data-th-href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}">
+	<link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
@@ -19,81 +20,52 @@
 				</div>
 			</section>
 		 </header>
-		<div class="row">
-		
-			<main class="col-9">
-				<h1>HOLA MUNDO</h1>
-				
-				<div class="row">
-
-					<section class="col-6">
-						<div id="carouselExample" class="carousel slide">
-						  <div class="carousel-inner">
-						    <div class="carousel-item active">
-						      <img src="/images/click.png" class="d-block w-100" alt="...">
-						    </div>
-						    <div class="carousel-item">
-						      <img src="/images/logo.png" class="d-block w-100" alt="...">
-						    </div>
-						    <div class="carousel-item">
-						      <img src="..." class="d-block w-100" alt="...">
-						    </div>
-						  </div>
-						  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-						    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						    <span class="visually-hidden">Previous</span>
-						  </button>
-						  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-						    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-						    <span class="visually-hidden">Next</span>
-						  </button>
-						</div>
-					</section>
-					
-					<section class="col-6">
-						<div class="accordion" id="accordionExample">
-						  <div class="accordion-item">
-						    <h2 class="accordion-header">
-						      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-						        Accordion Item #1
-						      </button>
-						    </h2>
-						    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-						      <div class="accordion-body">
-						        <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-						      </div>
-						    </div>
-						  </div>
-						  <div class="accordion-item">
-						    <h2 class="accordion-header">
-						      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-						        Accordion Item #2
-						      </button>
-						    </h2>
-						    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-						      <div class="accordion-body">
-						        <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-						      </div>
-						    </div>
-						  </div>
-						  <div class="accordion-item">
-						    <h2 class="accordion-header">
-						      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-						        Accordion Item #3
-						      </button>
-						    </h2>
-						    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-						      <div class="accordion-body">
-						        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-						      </div>
-						    </div>
-						  </div>
-						</div>
-					</section>
-					
+	<div class="row">
+		<main class="col-9">
+			<h2 class="h2 text-info my-2">Acerca de:</h2>
+			<p class="p">
+				La Universidad Nacional de Jujuy (UNJ o UNJu) es una universidad pública argentina ubicada en San Salvador de Jujuy, 
+				provincia de Jujuy. Fundada en 1973, cuenta con cuatro facultades y cinco institutos, donde cursan sus carreras 
+				alrededor de 25 000 estudiantes. Hay 40 mil usuarios de alumnos en UNJu Virtual.
+			</p>
+			<div class="masinfo row">
+				<div class="col-6">
+					<h3>CARRERAS DE GRADO</h3>
+					<ol>
+						<li>INGENIERÍA QUIMICA</li>
+						<li>INGENIERÍA DE MINAS</li>
+						<li>INGENIERÍA INDUSTRIAL</li>
+						<li>INGENIERÍA INFORMÁTICA</li>
+					</ol>
 				</div>
-			</main>
-			
+				<div class="col-6">
+					<h3>CARRERAS DE PREGRADO</h3>
+					<ol>
+						<li>ANALISTA PROGRAMADOR UNIVERSITARIO</li>
+						<li>TECNICATURA UNIVERSITARIA EN DISEÑO INTEGRAL DE VIDEOJUEGOS</li>
+						<li>INGENIERÍA INDUSTRIAL</li>
+						<li>TECNICATURA UNIVERSITARIA EN PERFORACIONES</li>
+					</ol>
+					<h3>CONVENIO UNT</h3>
+				</div>
+			</div>
+			<section>
+				<h3 class="">Noticas Recientes</h3>
+				<div id="carouselExampleSlidesOnly" class="carousel slide mx-auto" data-bs-ride="carousel" style="width:500px">
+					  <div class="carousel-inner">
+					    <div class="carousel-item active">
+					      <img src="/images/vacunacion-unju-2024.jpg" class="d-block w-100" alt="...">
+					    </div>
+					    <div class="carousel-item">
+					      <img src="/images/turnos-examen-2.jpg" class="d-block w-100" alt="...">
+					    </div>
+					    <div class="carousel-item">
+					      <img src="/images/vacaciones-invierno-2024.jpg" class="d-block w-100" alt="...">
+					    </div>
+					  </div>
+				</div>
+			</section>
+		</main>
 		<aside class="col-3">
 			<div class="container">
 				<h3 class="h3 text-center my-2 border-top border-info">Enlaces</h3>
@@ -115,8 +87,7 @@
 				</div>
 			</div>
 		</aside>
-		
-		</div>
+	</div>
 		<footer>
 			<h1>FOOTER</h1>
 			<div data-th-replace="~{fragments/header::footer}">
