Tp4 parte 1 finalizado

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -11,3 +11,17 @@
 .masinfo{
 	color: white;
 }
+.container{
+		padding: 60px;
+}
+.container h4{
+	color: white;
+	
+}
+.container p{
+	color: #959595;
+}
+.container a{
+	text-decoration: none;
+	color: #959595;
+}
