--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -25,7 +25,7 @@
 	  </div>
 	</nav>
 	
-	<div class="container" data-th-fragment="footer">
+	<div class="container bg-dark" data-th-fragment="footer">
 		<div class="row">
 			<div class="col-4">
 				<h4>FACULTAD DE INGENIERÍA - UNJu</h4>
