agregada la funcionalidad de guardar y mostrar todas las carreras

--- a/src/main/resources/templates/formCarrera.html
+++ b/src/main/resources/templates/formCarrera.html
@@ -10,18 +10,18 @@
 <body>
 	<div class="container">
 		<h1>FORMULARIO CARRERA</h1>
-		<form data-th-object="${nuevaCarrera}">
+		<form data-th-object="${nuevaCarrera}" data-th-action="@{/guardarCarrera}" method="post">
 		  <div class="col-sm-6">
 		    <label for="codigo" class="form-label">Codigo</label>
-		    <input type="text" class="form-control" id="codigo">
+		    <input type="text" class="form-control" id="codigo" data-th-field="*{codigo}">
 		  </div>
 		  <div class="col-sm-6">
 		    <label for="nombre" class="form-label">Nombre carrera</label>
-		    <input type="text" class="form-control" id="nombre" aria-describedby="emailHelp">
+		    <input type="text" class="form-control" id="nombre" data-th-field="*{nombre}">
 		  </div>
 		  <div class="col-sm-6">
 		    <label for="cantidad" class="form-label">Cantidad de años</label>
-		    <input type="number" class="form-control" id="cantidad">
+		    <input type="number" class="form-control" id="cantidad" data-th-field="*{cantAnios}">
 		  </div>
 		  <button type="submit" class="btn btn-primary">Guardar Carrera</button>
 		</form>
