Agregado el modificar en Carrera

--- a/src/main/resources/templates/formCarrera.html
+++ b/src/main/resources/templates/formCarrera.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="container">
 		<h1>FORMULARIO CARRERA</h1>
-		<form data-th-object="${nuevaCarrera}" data-th-action="@{/guardarCarrera}" method="post">
+		<form data-th-object="${nuevaCarrera}" data-th-action="${band}?@{/modificarCarrera}:@{/guardarCarrera}" method="post">
 		  <div class="col-sm-6">
 		    <label for="codigo" class="form-label">Codigo</label>
 		    <input type="text" class="form-control" id="codigo" data-th-field="*{codigo}">
